--- a/public/modules/core/less/_core.variables.less
+++ b/public/modules/core/less/_core.variables.less
@@ -1,30 +1,42 @@
 
-// ---------------- BASE COLOR ----------------
-@base-color: #1ab394;
+// ---------------- BASE COLORS ----------------
+@base-color: #1AB394;
+@body-background-color: #f3f3f4;
 
-// ---------------- TYPOGRAPHY ----------------
-@light-text: #fff;
-@link-color: #1c84c6;
+// ---------------- ERROR COLORS ----------------
+@error-text: #FA787E;
+
+// ---------------- BTN COLORS ----------------
+@btn_white--border-color: #dbdcdd;
+
+// ---------------- NOTIFICATIONS COLORS ----------------
+@notification--brd-top-color: #DDD;
+
+// ---------------- TYPOGRAPHY COLORS----------------
+@light-text: #FFF;
+@link-color: #1C84C6;
 @border-color: #D6D6D6;
 @main-bg-color: #F5F5F5;
-@error-message-color: #a94442;
+@error-message-color: #A94442;
 
 // ---------------- COLORS ----------------
+@aside-background-color: #2f4050;
+
 /* naming from http://www.color-blindness.com/color-name-hue/ */
-@color-dark-pink: #e84f5e;
-@color-wewak: #f1959e;
-@color-carissma: #e88c95;
-@color-pale-pink: #fdedef;
-@color-sun: #f28832;
-@color-sea-buckthorn: #ea9b5c;
-@color-tacao: #f7b884;
-@color-serenade: #fce7d6;
-@color-mountain-meadow: #19b293;
-@color-downy: #75d1be;
+@color-dark-pink: #E84F5E;
+@color-wewak: #F1959E;
+@color-carissma: #E88C95;
+@color-pale-pink: #FDEDEF;
+@color-sun: #F28832;
+@color-sea-buckthorn: #EA9B5C;
+@color-tacao: #F7B884;
+@color-serenade: #FCE7D6;
+@color-mountain-meadow: #19B293;
+@color-downy: #75D1BE;
 @color-mid-grey: #676a6c;
-@color-light-grey: #aeafaf;
-@color-jordy-blue: #77b5dd;
-@color-lavender: #e8f2f9;
+@color-light-grey: #AEAFAF;
+@color-jordy-blue: #77B5DD;
+@color-lavender: #E8F2F9;
 
 // ---------------- AUTHORIZATION PAGES ----------------
 @auth-bg-img: url('/modules/users/img/backgrounds/bg-1.jpg');
@@ -32,8 +44,8 @@
 @logo-lg-dark: url('/modules/users/img/logo-lg-dark.png');
 @mobile-backdrop: rgba(0, 0, 0, 0.7);
 @intro-backdrop: rgba(0, 0, 0, .5);
-@auth-aside-bg: #fff;
-@intro-color: #fff;
+@auth-aside-bg: #FFF;
+@intro-color: #FFF;
 
 // ---------------- SCREENS ----------------
 @mobile-display: ~"only screen and (max-width: 667px)";
