--- a/public/modules/core/less/datepicker/_datepicker.less
+++ b/public/modules/core/less/datepicker/_datepicker.less
@@ -19,7 +19,7 @@
         tr:first-child th {
           border-radius: 0;
           background: @color-mountain-meadow;
-          color: #fff;
+          color: #FFF;
 
           &:hover,
           &:active,
@@ -57,7 +57,7 @@
           &.weekend {
             color: @color-dark-pink;
             &.active {
-              color: #fff;
+              color: #FFF;
             }
           }
 
