--- a/public/modules/core/less/navigation/_navigation.less
+++ b/public/modules/core/less/navigation/_navigation.less
@@ -32,7 +32,7 @@
   vertical-align: middle;
 
   > .dropdown-toggle {
-    color: #676a6c;
+    color: @link-color;
     font-size: 16px;
     padding: 0;
 
