--- a/public/modules/core/less/sidebar/_sidebar.less
+++ b/public/modules/core/less/sidebar/_sidebar.less
@@ -1,7 +1,7 @@
 .left-sidebar {
   position: fixed;
   z-index: 1;
-  background: #2f4050;
+  background: @aside-background-color;
   top: 0;
   left: 0;
   height: 100%;
@@ -13,7 +13,7 @@
     border: none;
 
     option {
-      background-color: #2f4050;
+      background-color: @aside-background-color;
     }
   }
 }
