--- a/public/modules/core/less/_core.override.less
+++ b/public/modules/core/less/_core.override.less
@@ -8,21 +8,13 @@
 }
 
 .browsehappy.jumbotron.hide,
-body.ng-cloak {
-  display: block;
-}
+body.ng-cloak { display: block; }
 
-body {
-  background: @body-background-color;
-}
+body { background: @body-background-color; }
 
-a {
-  color: @link-color;
-}
+a { color: @link-color; }
 
-textarea {
-  resize: vertical;
-}
+textarea { resize: vertical; }
 
 .btn {
   background-image: none;
@@ -34,9 +26,7 @@ textarea {
   }
 }
 
-.nav-header {
-  background-repeat: repeat;
-}
+.nav-header { background-repeat: repeat; }
 
 .nav-title {
   font-size: 1.5em;
@@ -48,8 +38,6 @@ textarea {
   background: #FFF;
 
   .top-link {
-    &:hover {
-      color: @base-color;
-    }
+    &:hover { color: @base-color; }
   }
 }
