--- a/public/modules/core/less/_core.variables.less
+++ b/public/modules/core/less/_core.variables.less
@@ -1,13 +1,27 @@
-
 // ---------------- BASE COLORS ----------------
 @base-color: #1AB394;
-@body-background-color: #f3f3f4;
+@body-background-color: #F3F3F4;
+@main-bg-color: #F5F5F5;
+@border-color: #D6D6D6;
+@todo-list-controls-color: #253340;
+@task-list-header-brd-btm-color: #212121;
+@task-list-header-bg-color: #333;
+@tasks-list-bg-color: #3D3D3D;
+@tasks-subtitle-wrapper-bg-color: #3D3D3D;
+@nav-iten-hover: #293846;
+
+// ---------------- PRIORITY COLORS ----------------
+@priority-1-color: #ED5565;
+@priority-2-color: #F3A747;
+@priority-3-color: #61B394;
+@priority-4-color: #676A6C;
 
 // ---------------- ERROR COLORS ----------------
 @error-text: #FA787E;
+@error-message-color: #A94442;
 
 // ---------------- BTN COLORS ----------------
-@btn_white--border-color: #dbdcdd;
+@btn_white--border-color: #DBDCDD;
 
 // ---------------- NOTIFICATIONS COLORS ----------------
 @notification--brd-top-color: #DDD;
@@ -15,12 +29,10 @@
 // ---------------- TYPOGRAPHY COLORS----------------
 @light-text: #FFF;
 @link-color: #1C84C6;
-@border-color: #D6D6D6;
-@main-bg-color: #F5F5F5;
-@error-message-color: #A94442;
+@controls-link-color: #979FA7;
 
 // ---------------- COLORS ----------------
-@aside-background-color: #2f4050;
+@aside-background-color: #2F4050;
 
 /* naming from http://www.color-blindness.com/color-name-hue/ */
 @color-dark-pink: #E84F5E;
@@ -33,7 +45,7 @@
 @color-serenade: #FCE7D6;
 @color-mountain-meadow: #19B293;
 @color-downy: #75D1BE;
-@color-mid-grey: #676a6c;
+@color-mid-grey: #676A6C;
 @color-light-grey: #AEAFAF;
 @color-jordy-blue: #77B5DD;
 @color-lavender: #E8F2F9;
