--- a/public/modules/core/less/navigation/_navigation.less
+++ b/public/modules/core/less/navigation/_navigation.less
@@ -1,6 +1,4 @@
-.navbar-right i {
-  font-size: 20px;
-}
+.navbar-right i { font-size: 20px; }
 
 .navbar-header {
   > .page-title {
@@ -36,14 +34,10 @@
     font-size: 16px;
     padding: 0;
 
-    > * {
-      vertical-align: middle;
-    }
+    > * { vertical-align: middle; }
   }
 
-  > .dropdown-menu a {
-    font-size: 14px;
-  }
+  > .dropdown-menu a { font-size: 14px; }
 
   .profile-image-wrapper {
     display: inline-block;
@@ -52,7 +46,5 @@
     width: 48px;
   }
 
-  .profile-image {
-    height: 48px;
-  }
+  .profile-image { height: 48px; }
 }
