--- a/public/modules/core/less/sidebar/_sidebar.less
+++ b/public/modules/core/less/sidebar/_sidebar.less
@@ -12,8 +12,6 @@
     width: 100%;
     border: none;
 
-    option {
-      background-color: @aside-background-color;
-    }
+    option { background-color: @aside-background-color; }
   }
 }
