--- a/public/modules/core/less/core.main.less
+++ b/public/modules/core/less/core.main.less
@@ -8,24 +8,16 @@
 @import "navigation/_navigation.less";
 @import "sidebar/_sidebar.less";
 
-.undecorated-link:hover {
-  text-decoration: none;
-}
+.undecorated-link:hover { text-decoration: none; }
 
-.page-wrapper {
-  height: 100%;
-}
+.page-wrapper { height: 100%; }
 
-.container-wrapper {
-  background: #f3f3f4;
-}
+.container-wrapper { background: @body-background-color; }
 
 .only-mobile {
   display: none;
 
-  @media @mobile-display {
-    display: block;
-  }
+  @media @mobile-display { display: block; }
 }
 
 .add-task {
@@ -33,9 +25,7 @@
   color: #fff;
   font-size: 1.3em;
 
-  &:hover {
-    color: @base-color;
-  }
+  &:hover { color: @base-color; }
 }
 
 .nav-item {
@@ -45,9 +35,7 @@
   font-size: 1.2em;
   cursor: pointer;
 
-  &:hover {
-    background: #293846;
-  }
+  &:hover { background: @nav-iten-hover; }
 }
 
 .task-list-item {
@@ -56,13 +44,9 @@
   }
 }
 
-.p-r-1 {
-  padding-right: 5px;
-}
+.p-r-1 { padding-right: 5px; }
 
-.p-l-1 {
-  padding-left: 5px;
-}
+.p-l-1 { padding-left: 5px; }
 
 .p-1 {
   padding-right: 5px;
@@ -75,21 +59,15 @@
 }
 
 
-.ui-sref.back {
-  margin-bottom: 20px;
-}
+.ui-sref.back { margin-bottom: 20px; }
 
-.rzslider-manual-input {
-  margin-top: .5em;
-}
+.rzslider-manual-input { margin-top: .5em; }
 
 // ---------------- MAIN CONTENT ----------------
 .main-view-container {
   height: 100%;
 
-  > section {
-    height: 100%;
-  }
+  > section { height: 100%; }
 }
 
 .main-content {
@@ -98,9 +76,7 @@
   height: 100%;
   z-index: 2;
 
-  &.with-sidebar {
-    margin-left: 300px;
-  }
+  &.with-sidebar { margin-left: 300px; }
 
   .container-wrapper {
     min-height: 100%;
@@ -123,9 +99,7 @@
   }
 }
 
-.btn-ibox-title {
-  margin-top: -10px;
-}
+.btn-ibox-title { margin-top: -10px; }
 
 // ---------------- NOTIFICATION ----------------
 div.ui-notification {
@@ -139,9 +113,7 @@ div.ui-notification {
     line-height: 1;
   }
 
-  &.success {
-    background: @base-color;
-  }
+  &.success { background: @base-color; }
 
   .message {
     background-color: transparent;
@@ -163,50 +135,42 @@ div.ui-notification {
 }
 
 .error-message {
-  .error-text {
-    color: @error-message-color;
-  }
+  .error-text { color: @error-message-color; }
 }
 
 // ---------------- PRIORITY ----------------
 .item {
-  &-priority {
-    color: @color-mid-grey;
-  }
+  &-priority { color: @color-mid-grey; }
 
   &-priority-1 {
     border-left: 10px solid @color-dark-pink;
     color: @color-dark-pink;
 
-    .item-priority:focus {
-      border-color: @color-dark-pink !important;
-    }
+    // TODO important WHY?
+    .item-priority:focus { border-color: @color-dark-pink !important; }
   }
 
   &-priority-2 {
     border-left: 10px solid @color-sun;
     color: @color-sun;
 
-    .item-priority:focus {
-      border-color: @color-sun !important;
-    }
+    // TODO important WHY?
+    .item-priority:focus { border-color: @color-sun !important; }
   }
 
   &-priority-3 {
     border-left: 10px solid @color-mountain-meadow;
     color: @color-mountain-meadow;
 
-    .item-priority:focus {
-      border-color: @color-mountain-meadow !important;
-    }
+    // TODO important WHY?
+    .item-priority:focus { border-color: @color-mountain-meadow !important; }
   }
 
   &-priority-4 {
     border-left: 10px solid @color-mid-grey;
     color: @color-mid-grey;
 
-    .item-priority:focus {
-      border-color: @color-mid-grey !important;
-    }
+    // TODO important WHY?
+    .item-priority:focus { border-color: @color-mid-grey !important; }
   }
 }
