--- a/public/modules/core/less/datepicker/_datepicker.less
+++ b/public/modules/core/less/datepicker/_datepicker.less
@@ -1,17 +1,11 @@
 .bootstrap-datetimepicker-widget {
   font-size: 0.85em;
 
-  .row {
-    margin: 0;
-  }
+  .row { margin: 0; }
 
-  &.dropdown-menu {
-    padding: 0;
-  }
+  &.dropdown-menu { padding: 0; }
 
-  .datepicker {
-    padding: 0;
-  }
+  .datepicker { padding: 0; }
 
   .datepicker-days {
     .table-condensed {
@@ -27,12 +21,12 @@
             background-color: darken(@color-mountain-meadow, 3%);
           }
         }
+
         .dow {
           color: @color-mountain-meadow;
+
           &:nth-child(6),
-          &:nth-child(7) {
-            color: @color-dark-pink;
-          }
+          &:nth-child(7) { color: @color-dark-pink; }
         }
       }
 
@@ -40,14 +34,11 @@
         .day {
           &.active,
           &:active,
-          &:hover {
-            border-radius: 50%;
-          }
+          &:hover { border-radius: 50%; }
 
           &.today {
-            &:before {
-              border: 0;
-            }
+            &:before { border: 0; }
+
             &:not(.active) {
               font-weight: 900;
               color: @color-mountain-meadow;
@@ -56,22 +47,17 @@
 
           &.weekend {
             color: @color-dark-pink;
-            &.active {
-              color: #FFF;
-            }
+
+            &.active { color: #FFF; }
           }
 
-          &.new, &.disabled, &.old {
-            opacity: 0.4;
-          }
+          &.new, &.disabled, &.old { opacity: 0.4; }
         }
       }
     }
   }
 
-  .picker-switch.accordion-toggle {
-    font-size: 1.2em;
-  }
+  .picker-switch.accordion-toggle { font-size: 1.2em; }
 
   @media (min-width: 768px) {
     .datepicker.col-md-6,
