--- a/public/modules/events/less/events.main.less
+++ b/public/modules/events/less/events.main.less
@@ -2,26 +2,25 @@
 @import "events-list/_events.list.less";
 
 .create-event-wrapper {
-  .form-holder {
-    margin-bottom: 20px;
-  }
+  .form-holder { margin-bottom: 20px; }
+
   .column-wrapper {
-    .calendar-btn {
-      cursor: pointer;
-    }
+    .calendar-btn { cursor: pointer; }
   }
+
   .error-text {
     color: @error-text;
     margin-top: 5px;
   }
+
   .btn-white {
     border-color: @btn_white--border-color;
+
     &:hover {
       background: @base-color;
       color: #FFF;
     }
-    &:focus {
-      outline: none;
-    }
+
+    &:focus { outline: none; }
   }
 }
