313: Refactor notifications less

--- a/public/modules/schedule-notifications/less/notifications.main.less
+++ b/public/modules/schedule-notifications/less/notifications.main.less
@@ -17,9 +17,7 @@
     }
   }
 
-  i {
-    font-size: inherit;
-  }
+  i { font-size: inherit; }
 
   .notification-link {
     padding-left: 0 !important;
@@ -31,8 +29,6 @@
     overflow: hidden;
     color: inherit;
 
-    &:hover {
-      color: @base-color;
-    }
+    &:hover { color: @base-color; }
   }
 }
