313: Build infrastructure in LESS directory users

--- a/public/modules/core/less/_core.variables.less
+++ b/public/modules/core/less/_core.variables.less
@@ -58,6 +58,7 @@
 @intro-backdrop: rgba(0, 0, 0, .5);
 @auth-aside-bg: #FFF;
 @intro-color: #FFF;
+@uath-page--popover-brd-right: #303030;
 
 // ---------------- SCREENS ----------------
 @mobile-display: ~"only screen and (max-width: 667px)";
