313: Improve LESS infrastructure.  Update grunt LESS build and improve related files.

--- a/public/less/_app.variables.less
+++ b/public/less/_app.variables.less
@@ -26,6 +26,9 @@
 // ---------------- NOTIFICATIONS COLORS ----------------
 @notification--brd-top-color: #DDD;
 
+// ---------------- FC COLORS ----------------
+@fc-today-bg-color: #E8F7F4;
+
 // ---------------- TYPOGRAPHY COLORS----------------
 @light-text: #FFF;
 @link-color: #1C84C6;
