--- a/public/modules/calendar/less/calendar.less
+++ b/public/modules/calendar/less/calendar.less
@@ -1,100 +1,2 @@
-@import "public/modules/core/less/variables";
-
-.calendar-wrapper {
-	.fc-widget-content .fc-event-container,
-	.fc-day-grid-event{
-		margin: 0;
-		font-size: 0.95em;
-	}
-	.fc-toolbar .fc-button {
-		height: auto;
-		padding: 0.4em 1em;
-		margin: 0;
-		border-radius: 0;
-		font-weight: 600;
-		text-transform: capitalize;
-		opacity: 1;
-		z-index: 1;
-		outline: none;
-	}
-	.fc-day-header {
-		padding: 1em 0;
-		font-size: 0.9em;
-		background-color: @color-mountain-meadow;
-		color: #fff;
-	}
-	.fc-today {
-		background: #E8F7F4;
-	}
-	.fc-icon {
-		margin: 0;
-	}
-	.fc-body {
-		.fc-sat,
-		.fc-sun,
-		.fc-bgevent {
-			background-color: @color-lavender;
-			opacity: 0.8;
-		}
-	}
-}
-
-.fc-button:not(.fc-state-disabled):hover,
-.fc-state-active,
-.fc-state-disabled {
-	color: @light-text;
-	border-color: transparent;
-
-	.fc-right & {
-		background: @link-color;
-	}
-	.fc-left & {
-		background: @color-mountain-meadow;
-	}
-}
-
-.fc-event {
-	border-radius: 0;
-
-	.fc-bg {
-		opacity: 0;
-	}
-	&.task {
-		border-width: 0 0 0 8px;
-
-		&-priority-1 {
-			border-color: @color-dark-pink;
-			background-color: @color-wewak;
-		}
-		&-priority-2 {
-			border-color: @color-sun;
-			background-color: @color-tacao;
-		}
-		&-priority-3 {
-			border-color: @color-mountain-meadow;
-			background-color: @color-downy;
-		}
-		&-priority-4 {
-			border-color: @link-color;
-			background-color: @color-jordy-blue;
-		}
-	}
-	&.event {
-		background: @color-mountain-meadow;
-
-		&.sick {
-			background-color: @color-pale-pink;
-			border-color: @color-carissma;
-			color: @color-carissma;
-		}
-		&.vacation {
-			background-color: @color-serenade;
-			border-color: @color-sea-buckthorn;
-			color: @color-sea-buckthorn;
-		}
-	}
-	.fc-time {
-		font-weight: 600;
-		font-size: inherit;
-	}
-}
+@import "fc/calendar.fc.less";
+@import "calendar-wrapper/calenadar.wrapper.less";
