--- a/public/modules/events/less/events.less
+++ b/public/modules/events/less/events.less
@@ -1,5 +1,4 @@
-@import "../../core/less/_core.variables.less";
-@import "events-list/_events.list.less";
+@import "events-list/events.list.less";
 
 .create-event-wrapper {
   .form-holder { margin-bottom: 20px; }
