--- a/public/modules/tasks/less/tasks-list/taskList.less
+++ b/public/modules/tasks/less/tasks-list/taskList.less
@@ -15,7 +15,7 @@ li {
 }
 .controls-link {
   font-size: 1.3em;
-  padding: .5px;
+  padding: 0 5px;
   color: @controls-link-color;
 
   &:hover, &:active {
@@ -26,7 +26,7 @@ li {
 .task-list-header {
   border-bottom: 1px solid @task-list-header-brd-btm-color;
   height: 70px;
-  padding: .15px;
+  padding: 0 15px;
   width: 100%;
   display: table;
   background-color: @task-list-header-bg-color;
@@ -48,7 +48,7 @@ li {
     font-size: 1.5em;
     float: left;
   }
-  
+
   > .add-task-link {
     float: right;
 
@@ -60,7 +60,7 @@ li {
 }
 
 .task-list-show-completed {
-  padding: .10px;
+  padding: 0 10px;
 
   label { color: #FFF; }
 }
@@ -81,7 +81,7 @@ li {
       display: inline-block;
       font-size: 1.5em;
       color: #FFF;
-      margin: .10px;
+      margin: 0 10px;
       vertical-align: middle;
 
       &.tasks-priority1 { color: @priority-1-color; }
