--- a/public/modules/modals/views/modals.view.html
+++ b/public/modules/modals/views/modals.view.html
@@ -8,7 +8,7 @@
   <div class="modal-footer">
     <button class="btn btn-primary" type="button"
       data-ng-click="modal.firstWayHandle()">
-      {{modal.renderModalData().firstHandler}}
+      {{modal.renderModalData().firstHandler}} {{modal.renderModalData().timeToFree}}
     </button>
     <button class="btn btn-warning" type="button"
       data-ng-click="modal.secondWayHandle()"
@@ -17,6 +17,3 @@
     </button>
   </div>
 </div>
-
-
-
